# Smart-Butler-Starter

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  smart-butler-2.0-plan-v2.md  smart-butler-2.0-plan-v4.md  smart-butler-2.0-plan.md
.github/workflows/: tag-checkpoints.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md
.planning/phases/01-core-infrastructure/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-notifications-feedback/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/quick/1-exclude-voice-memos-from-file-watching/: 1-PLAN.md  1-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
Reference Code/Apple Notes Handler (Slightly Buggy)/: apple-notes-import-inbox.py  apple-notes-write.py
Reference Code/Local Speech to Text Parakeet/: asr_helper.py  speech_to_text_on_mac.py
Reference Code/Menubar App/: menubar_workflow_app.py
Reference Code/Menubar App/src/: __init__.py  butler_writes_cache.py  cache_manager.py  handlers.py  llm_client.py  llm_models.py  main.py  memory.py  reference_resolution.py  router.py  routing_keywords_cache.py  task_handlers.py  task_queue.py  transcript_cleanup.py  types.py  worker_launcher.py  workflow_status.py
Reference Code/Youtube Handler/: asr_helper.py  youtube_to_reference.py
launchd/: com.butler.voicewatch.plist
scripts/: install.sh  install_launchd.sh  tag-checkpoint.sh
src/butler/: __init__.py
src/core/: capabilities.py  config.py  event_bus.py  logging_config.py  plugin_manager.py  router.py  safe_write.py  task_queue.py  throttling.py  transcriber.py
src/plugins/: base.py  manifest.py
src/smart_butler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/cli/: test_doctor.py  test_main.py
tests/core/: test_capabilities.py  test_config.py  test_event_bus.py  test_logging.py  test_plugin_manager.py  test_router.py  test_safe_write.py  test_task_queue.py  test_throttling.py  test_transcriber.py
tests/integration/: test_voice_to_obsidian.py
tests/plugins/: test_base.py  test_daily_writer.py  test_voice_input.py
(+19 files in other folders)
