[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-butler"
version = "2.0.0"
description = "Voice-first AI assistant that processes voice memos and routes notes to Obsidian"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Smart Butler Team", email = "butler@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Personal Information Managers",
]
requires-python = ">=3.10"
dependencies = [
    "blinker>=1.9.0",
    "huey>=2.6.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "ollama>=0.6.1",
    "chromadb>=1.5.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
transcription = [
    "parakeet-mlx>=0.1.0; sys_platform == 'darwin'",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]
all = [
    "smart-butler[transcription,dev]",
]

[project.scripts]
butler = "butler.cli.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/smart-butler"
Documentation = "https://github.com/yourusername/smart-butler#readme"
Repository = "https://github.com/yourusername/smart-butler.git"
Issues = "https://github.com/yourusername/smart-butler/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["butler"]
